[gd_scene load_steps=73 format=3 uid="uid://cioe5kmkdg4qw"]

[ext_resource type="Script" uid="uid://de5r7mvl6u376" path="res://Scripts/Enemies/GoblinDual.gd" id="1_goblin"]
[ext_resource type="Texture2D" uid="uid://bc6ylc53vg63e" path="res://Assets/Sprites/Enemies/GoblinDual/Goblin_Dual_Idle.png" id="2_idle"]
[ext_resource type="Texture2D" uid="uid://bc6ad18rdmjyj" path="res://Assets/Sprites/Enemies/GoblinDual/Goblin_Dual_Move.png" id="3_move"]
[ext_resource type="Texture2D" uid="uid://bd64lkwbxf66e" path="res://Assets/Sprites/Enemies/GoblinDual/Goblin_Dual_Attack.png" id="4_attack"]

[sub_resource type="CircleShape2D" id="CircleShape2D_physics"]
radius = 20.0

[sub_resource type="AtlasTexture" id="attack_down_1"]
atlas = ExtResource("4_attack")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_down_2"]
atlas = ExtResource("4_attack")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_down_3"]
atlas = ExtResource("4_attack")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_down_4"]
atlas = ExtResource("4_attack")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_down_5"]
atlas = ExtResource("4_attack")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_down_6"]
atlas = ExtResource("4_attack")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_1"]
atlas = ExtResource("4_attack")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_2"]
atlas = ExtResource("4_attack")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_3"]
atlas = ExtResource("4_attack")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_4"]
atlas = ExtResource("4_attack")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_5"]
atlas = ExtResource("4_attack")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_left_6"]
atlas = ExtResource("4_attack")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_1"]
atlas = ExtResource("4_attack")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_2"]
atlas = ExtResource("4_attack")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_3"]
atlas = ExtResource("4_attack")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_4"]
atlas = ExtResource("4_attack")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_5"]
atlas = ExtResource("4_attack")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_right_6"]
atlas = ExtResource("4_attack")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_1"]
atlas = ExtResource("4_attack")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_2"]
atlas = ExtResource("4_attack")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_3"]
atlas = ExtResource("4_attack")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_4"]
atlas = ExtResource("4_attack")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_5"]
atlas = ExtResource("4_attack")
region = Rect2(512, 384, 128, 128)

[sub_resource type="AtlasTexture" id="attack_up_6"]
atlas = ExtResource("4_attack")
region = Rect2(640, 384, 128, 128)

[sub_resource type="AtlasTexture" id="idle_down_1"]
atlas = ExtResource("2_idle")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="idle_down_2"]
atlas = ExtResource("2_idle")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="idle_down_3"]
atlas = ExtResource("2_idle")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="idle_down_4"]
atlas = ExtResource("2_idle")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="idle_left_1"]
atlas = ExtResource("2_idle")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="idle_left_2"]
atlas = ExtResource("2_idle")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="idle_left_3"]
atlas = ExtResource("2_idle")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="idle_left_4"]
atlas = ExtResource("2_idle")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="idle_right_1"]
atlas = ExtResource("2_idle")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="idle_right_2"]
atlas = ExtResource("2_idle")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="idle_right_3"]
atlas = ExtResource("2_idle")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="idle_right_4"]
atlas = ExtResource("2_idle")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="idle_up_1"]
atlas = ExtResource("2_idle")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="idle_up_2"]
atlas = ExtResource("2_idle")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="idle_up_3"]
atlas = ExtResource("2_idle")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="idle_up_4"]
atlas = ExtResource("2_idle")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_1"]
atlas = ExtResource("3_move")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_2"]
atlas = ExtResource("3_move")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_3"]
atlas = ExtResource("3_move")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_4"]
atlas = ExtResource("3_move")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_5"]
atlas = ExtResource("3_move")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_down_6"]
atlas = ExtResource("3_move")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_1"]
atlas = ExtResource("3_move")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_2"]
atlas = ExtResource("3_move")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_3"]
atlas = ExtResource("3_move")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_4"]
atlas = ExtResource("3_move")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_5"]
atlas = ExtResource("3_move")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_left_6"]
atlas = ExtResource("3_move")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_1"]
atlas = ExtResource("3_move")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_2"]
atlas = ExtResource("3_move")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_3"]
atlas = ExtResource("3_move")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_4"]
atlas = ExtResource("3_move")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_5"]
atlas = ExtResource("3_move")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_right_6"]
atlas = ExtResource("3_move")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_1"]
atlas = ExtResource("3_move")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_2"]
atlas = ExtResource("3_move")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_3"]
atlas = ExtResource("3_move")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_4"]
atlas = ExtResource("3_move")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_5"]
atlas = ExtResource("3_move")
region = Rect2(512, 384, 128, 128)

[sub_resource type="AtlasTexture" id="move_up_6"]
atlas = ExtResource("3_move")
region = Rect2(640, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_goblin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("attack_down_1")
}, {
"duration": 1.0,
"texture": SubResource("attack_down_2")
}, {
"duration": 1.0,
"texture": SubResource("attack_down_3")
}, {
"duration": 1.0,
"texture": SubResource("attack_down_4")
}, {
"duration": 1.0,
"texture": SubResource("attack_down_5")
}, {
"duration": 1.0,
"texture": SubResource("attack_down_6")
}],
"loop": false,
"name": &"attack_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("attack_left_1")
}, {
"duration": 1.0,
"texture": SubResource("attack_left_2")
}, {
"duration": 1.0,
"texture": SubResource("attack_left_3")
}, {
"duration": 1.0,
"texture": SubResource("attack_left_4")
}, {
"duration": 1.0,
"texture": SubResource("attack_left_5")
}, {
"duration": 1.0,
"texture": SubResource("attack_left_6")
}],
"loop": false,
"name": &"attack_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("attack_right_1")
}, {
"duration": 1.0,
"texture": SubResource("attack_right_2")
}, {
"duration": 1.0,
"texture": SubResource("attack_right_3")
}, {
"duration": 1.0,
"texture": SubResource("attack_right_4")
}, {
"duration": 1.0,
"texture": SubResource("attack_right_5")
}, {
"duration": 1.0,
"texture": SubResource("attack_right_6")
}],
"loop": false,
"name": &"attack_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("attack_up_1")
}, {
"duration": 1.0,
"texture": SubResource("attack_up_2")
}, {
"duration": 1.0,
"texture": SubResource("attack_up_3")
}, {
"duration": 1.0,
"texture": SubResource("attack_up_4")
}, {
"duration": 1.0,
"texture": SubResource("attack_up_5")
}, {
"duration": 1.0,
"texture": SubResource("attack_up_6")
}],
"loop": false,
"name": &"attack_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("idle_down_1")
}, {
"duration": 1.0,
"texture": SubResource("idle_down_2")
}, {
"duration": 1.0,
"texture": SubResource("idle_down_3")
}, {
"duration": 1.0,
"texture": SubResource("idle_down_4")
}],
"loop": true,
"name": &"idle_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("idle_left_1")
}, {
"duration": 1.0,
"texture": SubResource("idle_left_2")
}, {
"duration": 1.0,
"texture": SubResource("idle_left_3")
}, {
"duration": 1.0,
"texture": SubResource("idle_left_4")
}],
"loop": true,
"name": &"idle_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("idle_right_1")
}, {
"duration": 1.0,
"texture": SubResource("idle_right_2")
}, {
"duration": 1.0,
"texture": SubResource("idle_right_3")
}, {
"duration": 1.0,
"texture": SubResource("idle_right_4")
}],
"loop": true,
"name": &"idle_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("idle_up_1")
}, {
"duration": 1.0,
"texture": SubResource("idle_up_2")
}, {
"duration": 1.0,
"texture": SubResource("idle_up_3")
}, {
"duration": 1.0,
"texture": SubResource("idle_up_4")
}],
"loop": true,
"name": &"idle_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("move_down_1")
}, {
"duration": 1.0,
"texture": SubResource("move_down_2")
}, {
"duration": 1.0,
"texture": SubResource("move_down_3")
}, {
"duration": 1.0,
"texture": SubResource("move_down_4")
}, {
"duration": 1.0,
"texture": SubResource("move_down_5")
}, {
"duration": 1.0,
"texture": SubResource("move_down_6")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("move_left_1")
}, {
"duration": 1.0,
"texture": SubResource("move_left_2")
}, {
"duration": 1.0,
"texture": SubResource("move_left_3")
}, {
"duration": 1.0,
"texture": SubResource("move_left_4")
}, {
"duration": 1.0,
"texture": SubResource("move_left_5")
}, {
"duration": 1.0,
"texture": SubResource("move_left_6")
}],
"loop": true,
"name": &"move_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("move_right_1")
}, {
"duration": 1.0,
"texture": SubResource("move_right_2")
}, {
"duration": 1.0,
"texture": SubResource("move_right_3")
}, {
"duration": 1.0,
"texture": SubResource("move_right_4")
}, {
"duration": 1.0,
"texture": SubResource("move_right_5")
}, {
"duration": 1.0,
"texture": SubResource("move_right_6")
}],
"loop": true,
"name": &"move_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("move_up_1")
}, {
"duration": 1.0,
"texture": SubResource("move_up_2")
}, {
"duration": 1.0,
"texture": SubResource("move_up_3")
}, {
"duration": 1.0,
"texture": SubResource("move_up_4")
}, {
"duration": 1.0,
"texture": SubResource("move_up_5")
}, {
"duration": 1.0,
"texture": SubResource("move_up_6")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attackbox"]
radius = 28.0

[node name="GoblinDual" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_goblin")
enemy_type = "goblin_dual"
enemy_display_name = "Goblin Rogue"
max_health = 15.0
move_speed = 200.0
damage = 8.0
knockback_resistance = 0.3
experience_value = 5
crystal_drop_chance = 0.6
health_bar_width = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_physics")

[node name="VisualsPivot" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VisualsPivot"]
position = Vector2(2, -4)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_goblin")
animation = &"idle_right"
autoplay = "idle_down"
frame_progress = 0.8249996

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 96
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource("CircleShape2D_attackbox")

[node name="HealthBar" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="HealthBar"]
offset_left = -32.0
offset_top = -80.0
offset_right = 32.0
offset_bottom = -68.0
color = Color(0.2, 0, 0, 1)

[node name="Fill" type="ColorRect" parent="HealthBar"]
offset_left = -32.0
offset_top = -80.0
offset_right = 32.0
offset_bottom = -68.0
color = Color(1, 0, 0, 1)
